gitops/cilium/gatewayclass.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: Cilium
spec: 
  controllerName: io.cilium/gateway-controller
  description: "Cilium managed GatewayClass for boutique microservices app"
