gitops/cilium/referencegrant-tls.yml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-boutique-gateway-to-ref-tls-cert
  namespace: cert-store
spec: 
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: boutique
  to:  
    - group: ""
      kind: Secret
      namespace: boutique-tls-cert
