gitops/cilium/gateway-internal.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: boutique-gateway
  namespace: boutique
spec:
  gatewayClassName: cilium
  #infrastructure:
    #annotations:
      #service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "internal.aksboutique.com"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "internal.aksboutique.com"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: boutique-tls-cert
            namespace: cert-store
      allowedRoutes:
        namespaces:
          from: Same
