gitops/cilium/httproute-frontend.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boutique-frontend-route
  namespace: boutique
spec: 
  parentrefs:
    -name: boutique-gateway
  hostnames:
    - "boutiques.domain.com"
  rules:
    -matches:
       -path:
         type: PathPrefix
         value: /
    -backendRefs:
       -name: frontend-service
        port: 3000
