gitops/cilium/httproute-gateway-api.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boutique-frontend-route
  namespace: boutique
spec: 
  parentrefs:
    -name: boutique-gateway
  hostnames:
    - "boutiques.domain.com"
  rules:
    -matches:
       -path:
         type: PathPrefix
         value: /api
    -backendRefs:
       -name: gateway-service
        port: 3001
    -matches:
       -path:
         type: Exact
         value: /metrics
    -backendRefs:
       -name: gateway-service
        port: 3001
